problems -> improvements, closes #57

--- a/courses/templates/projects/eval_submit.html
+++ b/courses/templates/projects/eval_submit.html
@@ -122,7 +122,7 @@
     {% if project.problems_comments_field %}
       <div class="mb-3 question">
         <label for="problems_comments" class="question-text">
-          Problems or comments <span class="text-muted">(optional)</span>
+          Suggestions for improvement and comments <span class="text-muted">(optional)</span>
         </label>
         <textarea
           class="form-control"
