not showing the results for projects not submitted

--- a/courses/templates/projects/results.html
+++ b/courses/templates/projects/results.html
@@ -15,8 +15,11 @@
   <div class="alert alert-info" role="alert">
     <p>Please <a href="{% url 'login' %}">log in</a> to see the results of your projects.</p>
   </div>
+{% elif not submission %}
+  <div class="alert alert-info" role="alert">
+    <p>You didn't make a submission for this project.</p>
+  </div>
 {% else %}
-
   <div class="card m-4">
     <div class="card-body">
       <ul>
@@ -69,9 +72,11 @@
     </div>
   </div>
 
-  <div class="text-center">
-    Back to <a href="{% url 'course' course.slug %}">{{ course.title }}</a>
-  </div>
 {% endif %}
+
+<div class="text-center">
+  Back to <a href="{% url 'course' course.slug %}">{{ course.title }}</a>
+</div>
+
 
 {% endblock %}
