--- a/courses/templates/projects/eval.html
+++ b/courses/templates/projects/eval.html
@@ -33,6 +33,10 @@
     {% endfor %}
   </div>
 
+  <div class="text-center">
+    <a href="{% url 'project_list' course_slug=course.slug project_slug=project.slug %}" class="btn btn-secondary mt-3">See all projects</a>
+  </div>
+
 {% endif %}
 
 {% endblock %}
