--- a/courses/templates/projects/eval_submit.html
+++ b/courses/templates/projects/eval_submit.html
@@ -40,6 +40,12 @@
     criteria.
   </p>
 
+  {% if review.optional %}
+  <div>
+    Optional: True
+    <a href="{% url 'projects_eval_delete' course.slug project.slug review.id %}">Remove</a>
+  </div>
+  {% endif %}
   <h3 class="mb-3">Evaluation criteria</h3>
 
   <form method="post" class="needs-validation" novalidate>
