updated the note

--- a/courses/templates/courses/enrollment.html
+++ b/courses/templates/courses/enrollment.html
@@ -42,14 +42,14 @@
     {% endfor %}
 
     <p>
-      Display name appears on the leaderboard, is an auto-generated
-      random name. You can edit it to be a nickname, or your real
-      name.
+      Leaderboard name appears on the leaderboard. It's an auto-generated
+      random name. You can edit it to be your nickname, or your real
+      name. But you can also keep it.
     </p>
     <p>
-      Certificate name should be your actual name that you want to
+      Certificate name is your actual name that you want to
       appear on your certificate. If you don't set it, your
-      Display name will be used for the certificate.
+      leaderboard name will be used for the certificate.
     </p>
 
     <div class="mt-4 text-center">
