--- a/courses/templates/projects/eval.html
+++ b/courses/templates/projects/eval.html
@@ -17,7 +17,7 @@
 {% endfor %}
 {% endif %}
 
-<h2 class="mb-3 text-center">Projects to evaluate for {{ project.title }}</h2>
+<h2 class="mb-3 text-center">Evaluations for {{ project.title }}</h2>
 
 {% if not is_authenticated %}
   <div class="alert alert-info" role="alert">
@@ -39,13 +39,18 @@
     {% endfor %}
   </div>
 
-  <div class="text-center">
-    <a href="{% url 'project_list' course_slug=course.slug project_slug=project.slug %}"
-        class="btn btn-secondary mt-3">
-      See all projects
-    </a>
+  <div class="text-center mb-2 mt-3">
+    Completed {{ number_of_completed_evaluation }} out of {{ project.number_of_peers_to_evaluate }} mandatory project evaluations.
   </div>
 
 {% endif %}
+
+<div class="text-center">
+  <a href="{% url 'project_list' course_slug=course.slug project_slug=project.slug %}"
+      class="btn btn-secondary mt-3">
+    See all projects
+  </a>
+</div>
+
 
 {% endblock %}
