--- a/courses/templates/homework/homework.html
+++ b/courses/templates/homework/homework.html
@@ -236,7 +236,9 @@
   </form>
 
   {% if submission %}
-    <p class="text-muted question-text m-0">Last submission at: {{ submission.submitted_at|date:"F d, Y H:i" }}</p>
+    <p class="text-muted question-text m-0">Status: Submitted at {{ submission.submitted_at|date:"F d, Y H:i" }}</p>
+  {% else %}
+    <p class="text-muted question-text m-0">Status: Not submitted</p>
   {% endif %}
 
   <script>
