sort projects by score when its already scored

--- a/courses/templates/projects/results.html
+++ b/courses/templates/projects/results.html
@@ -72,6 +72,10 @@
     </div>
   </div>
 
+  <div class="text-center">
+    <a href="{% url 'project_list' course.slug project.slug %}">See all projects</a>
+  </div>
+
 {% endif %}
 
 <div class="text-center">
