--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+
 {% load tz %}
+{% load custom_filters %}
 
 {% block breadcrumbs %}
   <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
@@ -9,7 +11,7 @@
 <h2>{{ course.title }}</h2>
 
 <div>
-  <p>{{ course.description }}</p>
+  <p>{{ course.description | urlize_target_blank }}</p>
 </div>
 
 <div>
