--- a/courses/templates/projects/project.html
+++ b/courses/templates/projects/project.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load custom_filters %}
+
 
 {% block breadcrumbs %}
   <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
@@ -51,7 +53,7 @@
   {% endif %}
 {% endif %}
 
-<p class="text-muted">{{ project.description }}</p>
+<p class="text-muted">{{ project.description | urlize_target_blank }}</p>
 
 <h3 class="mb-3">Project submission</h3>
 
