note about timezone (closes #67)

--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -119,13 +119,13 @@
 </div>
 {% endif %}
 
-
 {% if not homeworks and not projects %}
 <div class="alert alert-info" role="alert">
   <p>There are no homeworks or projects available for this course yet. Come back later.</p>
 </div>
 {% endif %}
 
+<div class="mt-2">All deadlines are in your local timezone</div>
 
 <script>
   $(function() {
